<?xml version="1.0"?>
<package format="2">
  <name>isaac_moveit_ur5e</name>
  <version>0.1.0</version>
  <description>The moveit samples package</description>
  
  <maintainer email="isaac-sim@todo.todo">isaac sim</maintainer>
  
  <license>n</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ur5e_moveit_config</exec_depend>

  <export>

  </export>
</package>
