<?xml version="1.0"?>
<package format="2">
  <name>ur5e_with_2f85</name>
  <version>0.0.0</version>

  <description>The ur5e_with_2f85 package</description>

  <maintainer email="jinseok.kim970@gmail.com">Jinseok Kim</maintainer>
  <author email="jinseok.kim970@gmail.com">Jinseok Kim</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- <exec_depend>gazebo_ros</exec_depend> -->
  <exec_depend>ur5e_with_2f85_gazebo</exec_depend>
  <exec_depend>ur5e_with_2f85_description</exec_depend>

  <test_depend>rosunit</test_depend>

</package>